--- a/design-thinking/thiking.html
+++ b/design-thinking/thiking.html
@@ -16,12 +16,12 @@
             <li><a href="design.html">Design Thinking</a></li>
             <li><a href="finalProject.html">Proyecto de Fabricación Digital</a>
                 <ul>
-                    <li><a href="#">Gestión de Proyectos</a></li>
-                    <li><a href="#">Desarrollo de Planos 2D y/o 3D</a></li>
-                    <li><a href="#">Ejecución de Proyecto Final</a></li>
-                    <li><a href="#">Presentación de Proyecto Preliminar</a></li>
-                    <li><a href="#">Desarrollo de la Presentación Final</a></li>
-                    <li><a href="#">Feria de Proyectos</a></li>
+                    <li><a href="#">Desarrollo de la pagina web</a></li>
+                    <li><a href="#">Desarrollo de los planos 2D y 3D</a></li>
+                    <li><a href="#">Ejecución del proyecto final</a></li>
+                    <li><a href="#">Presentación del proyecto preliminar</a></li>
+                    <li><a href="#">Desarrollo de la presentación final al público</a></li>
+                    <li><a href="#">Preparacion de Speech y video Slide</a></li>
                 </ul>
             </li>
         </ul>
