--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -18,10 +18,10 @@
     </div>
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
-		<ul class="main-menu" id="main-menu">
-			<li><a href="../index.html">Home</a></li>
+        <ul class="main-menu" id="main-menu">
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
-				<ul>
+                <ul>
                     <li><a href="../design-thinking/practica1.html">Approach of the Design Thinking Project</a></li>
                     <li><a href="../design-thinking/practica2.html">Design Thinking Workshop</a></li>
                     <li><a href="../design-thinking/practica3.html">Empathize</a></li>
@@ -39,21 +39,23 @@
                     <li><a href="semana6.html">Project Fair</a></li>
                 </ul>
             </li>
-		</ul>
-	</nav>
+        </ul>
+    </nav>
 
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
                 <h1>Final Project Execution</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>In this stage we will show the steps and details of the assembly and all the process carried out to have our product, from the cutting of the pieces in the CNC of wood until the assembly of this, it will be possible to observe a bit of the programming of the cutting software , and the cutting itself of the machine and the configuration of this.</p>
+            </div>
         </div>
 
         <div class="think">
             <div class="think__img">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iksKu--930s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ES2t6ManhV8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <img src="../../img/2d.png" alt="">
             </div>
             <div class="think__details">
@@ -61,19 +63,28 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Title</p>
-                    <p class="think__details__info__cont">Developing</p>
+                    <p class="think__details__info__title">Final Project Execution</p>
+                    <p class="think__details__info__cont"></p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>Developing</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank">Document - 2D and 3D diagram</a></div>
+                    <p>We start with the plans of AutoCAD we import them to rhinoceros, this will give us the plane in millimeters (mm) later we will do the detailed steps in the video to have the cuts, we have to select the thickness of the cut that we will make and the dimensions since the iron can not pass 1.20 m wide and 2.70 long, you always have to consider the cutting parameters and try to save as much space as possible.</p>
+                    <p>Later in the next video will explain the configuration of the CNC wood milling machine, this so that we can make a cut saving space and material, it is very important to zero it on the x-axis and since the cutter will start from there it should be remembered that the same machine will indicate if the cut enters its margins.</p>
+                    <p>After having the pieces cut and with the exact measurements we will proceed to assemble the product for its presentation, the first thing we did was to assemble the frame on the sides of the base, then we added the support legs and then the fixed base for the mouse, inside this anger the plate for the RGB LEDs and for the cooler, after that the base for the laptop, this must be easy to tilt since with the support behind it allows it to tilt up to a maximum of 70 °.</p>
+                    <p>MATERIALS:</p>
+                        <p>- 5mm pressed wood panel</p>
+                        <p>- 9mm pressed wood panel</p>
+                        <p>- Butterfly bolts</p>
+                        <p>- Synthetic tail</p>
+                        <p>- Axes (hinges)</p>
+
+                        <p>Basically these are the materials for the framework or the project in wood basically. </p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank"></a></div>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>Developing</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0" target="_blank">Files - 2D and 3D Diagram</a></div>
+                    <p class="think__details__extra__title"></p>
+                    <p></p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0" target="_blank"></a></div>
                 </div>
             </div>
         </div>
@@ -91,8 +102,9 @@
         </div>
     </footer>
     <script src="../../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
+
