--- a/design-thinking/practica1.html
+++ b/design-thinking/practica1.html
@@ -54,8 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/introduccion.jpg" alt="">
-                <img src="../img/introduccion.jpg" alt="">
+                <img src="../img/hqdefault.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
