--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -55,7 +55,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/Empatizar.jpg" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qVmfvFhCVeY" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RcU_GgjjQD8" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="think__details">
