--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -54,7 +54,8 @@
         </div>
         <div class="think">
             <div class="think__img">
-                <img src="../img/DefinirDT.jpg" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dkTQn5VfmiA" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/MarcaDS.jpg" alt="">
             <div class="think__details__extra">
                     <p class="think__details__extra__title">CRITERIOS PARA EVALUAR LA INFORMACION</p>
                     <p class="think__details__extra__title">Autoridad</p>
@@ -68,6 +69,7 @@
                     <p class="think__details__extra__title">Exactitud</p>
                     <p>Revisamos otros proyectos similares al nuestro que fueron implementados en otras regiones del país o inclusive fuera del mismo, y el que más podemos destacar es el de una empresa en España y Chile, donde luego de realizado un análisis en las perdidas de estas herramientas se llegó a la conclusión que se debía dar una solución a este problema que causaba gastos económicos considerables.</p>
                     <a href="https://www.xataka.com/seguridad/asi-es-la-tecnologia-del-sistema-anti-robo-que-bloquea-los-carritos-de-mercadona-si-te-los-quieres-llevar"  target="_blank">Aticulo referido al prblema y las perdidas economicas que genera.</a>
+                    <img src="../img/MapaMental.jpg" alt="">
                 </div>
             </div>   
             <div class="think__details">
@@ -77,16 +79,16 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">RAIZ DEL PROBLEMA EN LOS SUPERMERCADOS</p>
                     <p class="think__details__info__cont">Si bien aún muchas empresas no prestan mucha importancia al problema de orden de los carritos de compras, ocasionando así sus daños, pérdidas o robos. La práctica de robar carritos metálicos de la compra para hacer negocio con ellos trae como consecuencia perdidas económicas en la empresa y un problema de satisfacción de los usuarios que ven cada vez más difícil por der acceder al uso de estos para realizar sus compras de una manera cómoda. Para ello, la cadena de hipermercados ha empezado a implantar en algunos de sus centros españoles unos carros de la compra con un nuevo sistema antirrobo incorporado.</p>
-                    <a href="http://www.mercuriocalama.cl/prontus4_nots/site/artic/20050209/pags/20050209045621.html" class="think__details__extra__description"  target="_blank">Aticulo referido al prblema y las perdidas economicas que genera.</a>
+                    <a href="http://www.mercuriocalama.cl/prontus4_nots/site/artic/20050209/pags/20050209045621.html" class="think__details__extra__description"  target="_blank">Articulo referido al prblema y las perdidas economicas que genera.</a>
                 </div>
-
                 <div class="think__details__info">
                     <p class="think__details__info__title">ENFOCAR EL PROBLEMA</p>
                     <p class="think__details__info__cont"> La insatisfacción en los usuarios de estos establecimientos como, por ejemplo, de que una persona al llegar y estar dentro del supermercado, pero al verse en la necesidad de tomar un carrito para compras mayores, pero estos están ahí botados por los estacionamientos lo cual le impide contar con uno y estar esperando que alguno lo desocupe.</p>
+                    <IMG src="../img/IMG-20180415-WA0016.jpg" width="380" height="550"/>
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">INSIGHT DEL USUARIOS, CLIENTE O CONSUMIDOR</p>
-                    <p class="think__details__extra__title">LA SATISFACCION DE COMPRAR</p>
+                    <p class="think__details__extra__title">"LA SATISFACCION DE COMPRAR"</p>
                     <p class="think__details__info__cont">Un supermercado que no sea atractivo no solo por sus bajos precios, sino también por el buen orden en que brindan sus servicios.
                     Tenemos que entender cómo se sienten los usuarios de este centro, no solo al entrar a dicho establecimiento y encontrar los bajos precios u ofertas de productos; también veamos en cómo estas personas se sientes antes de entrar y después de salir del local. Una persona se sentirá mucho más cómoda encontrando muy rápido un carrito de súper a su disposición y así no perder mucho tiempo en ingresar, como también este mismo al momento de salir del local no encontrará obstáculos (carritos de compras) abandonados en su camino al dirigirse a su transporte con retorno a casa.</p>
                 </div>
