--- a/design-thinking/practica5.html
+++ b/design-thinking/practica5.html
@@ -49,21 +49,21 @@
                 <h1>Idear</h1>
             </div>
             <div class="think__title__content">
-                <p>...</p>
+                <p>Llegados a este punto es donde podemos dejar fluir toda la creatividad del grupo. Es muy importante no dar soluciones o ideas a nuestro reto hasta que no llega este momento, en el que ya tenemos perfectamente definido el punto de vista del usuario.</p>
             </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dkTQn5VfmiA" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo</p>
+                    <p class="think__details__info__title">Técnica de Brainstorming</p>
+                    <p class="think__details__info__cont">El brainstorming es una técnica que  ayuda a crear ideas creativas y es muy útil para algunas empresas y personas que quieran desarrollar nuevas ideas.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">...</p>
