--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -55,7 +55,8 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/2d.png" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/9C_3H8zctnw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DFnrLwLVNgU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
