--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -54,7 +54,7 @@
         </div>
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y_gt7C68uKs" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mohyM86A7hY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             </div>
             <div class="think__details">
