--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -48,30 +48,36 @@
             <div class="think__title__text">
                 <h1>Presentación de Proyecto Preliminar</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>Se realizará la primera fase del acabado de nuestro proyecto, en el cual desarrollaremos nuestro producto con el uso de maquinas a nuestra disposicion.</p>
+            </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/dir6t60cAlY?rel=0" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rc77RuOGal4" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yXJFWf-_Lag" frameborder="0" allowfullscreen></iframe>
+                 <img src="../img/FuncionamientoLaser.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo.</p>
+                    <p class="think__details__info__title">GUIA DE USUARIO</p>
+                    <p class="think__details__extra__title">COMPONENTES</p>
+                    <p class="think__details__extra__description">Base con Luces LED</p>
+                    <p class="think__details__extra__description">Imagen de Acrilico</p>
+                    <p class="think__details__extra__description">Fuente de Alimentacion</p>
+                    <p class="think__details__extra__description">Guia de Usuario</p>
                 </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/file/d/1Fr3yzB_1fZSvpqip6UBm-l1IyFxge0_C/view?usp=sharing" target="_blank">Documento - Implementación al 50%</a>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">PRECAUCIONES Y ADVERTENCIAS</p>
+                    <p class="think__details__extra__title">Extraer la imagen en acrilico con cuido sin realizar acciones bruscas para evitar que esta se dañe o presente ralladuras.</p>
+                    <p class="think__details__extra__title">Al colocar la imagen de acrílico con mucho cuidado a la base de luces led</p>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">Precauciones</p>
+                    <p class="think__details__extra__title">Debe ser desenergizado la lámpara cuando se deje de usar para evitar el uso prologando de los leds. No debe dejarse enchufado todo el día. No abrir la base de luces led.</p>
+                    <p class="think__details__info__title">Nota</p>
+                    <p class="think__details__extra__title">Se recomienda la supervisión de un adulto en el caso de que un niño lo valla a usa.Los usuarios deberán conservar esta información para referencia futura. Los usuarios deben observar un estricto cumplimiento del manual de instrucciones mientras se está operando el producto.</p>
                 </div>
                 
             </div>
