--- a/design-thinking/practica1.html
+++ b/design-thinking/practica1.html
@@ -55,6 +55,21 @@
         <div class="think">
             <div class="think__img">
                 <img src="../img/hqdefault.jpg" alt="">
+            <div class="think__details__extra">
+                    <p class="think__details__extra__title">Diagrama de Gantt</p>
+                    <img src="../img/GANTT.jpg" alt="">
+                    <p class="think__details__extra__title">INVOLUCRADOS EN EL DESARROLLO DE LA PROPUESTA</p>
+                    <p class="think__details__extra__title">Natanael Josue Apaza Arias</p>
+                    <p>Tengo conocimientos relacionados con la tecnología y con ello también conocimientos basicos en materias de electrónica; pienso plasmar lo aprendido en la propuesta.</p>
+                    <p class="think__details__extra__title">Alexcy Antony Choque Chura</p>
+                    <p>Cuento con conocimientos en informática y programación en java, actualmente estudiando una carrera técnica relacionada con la electricidad.</p>
+                    <p class="think__details__extra__title">Eddie Armando Mollesaca Zela</p>
+                    <p>Cuento con conocimientos en equipo electrónicos de seguridad y entretenimiento, actualmente cursando cursos aplicados en la carrera de electrotecnia.</p>
+                    <p class="think__details__extra__title">Luis Gustavo Pari Rodriguez</p>
+                    <p>Realizo investigaciones relacionadas con la fabricación de nuevos productos tecnológicos que son muy útiles para el público en generaL.</p>
+                    <p class="think__details__extra__title">Dereck Johnny Zuñiga Concha</p>
+                    <p>Curso una carrera tecnica relacionada con temas de tecnolOgia; desarrollo temas basados en electricidad y también el uso de softwares que ayudan a obtener mejores resultados.</p>
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -63,6 +78,8 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">NUESTRA PROPUESTA</p>
                     <p class="think__details__info__cont">En el sector comercio de nuestro país ha existido un pequeño problema que viene afectando no solo economicamente a las empresas sino tambien a sus clientes, si bien la perdida o robo de carritos de compras en varios establecimientos pasa muy desapercibido; pero luego de realizado una investigacion del tema notamos que la suma total de estos elementos de trabajo llega a una gran perdida económica. Nuestra propuesta como solucion a este problema es el sistema antirrobo que se instalara colocando en los carritos un dispositivo que bloquea las ruedas de este si se supera determinada zona. Así, los clientes solo pueden circular con él por el espacio del supermercado y el aparcamiento. Pero luego de salir de cierta zona permitida las ruedas del carrito se bloquearán de forma automática dejándolo inutilizado. La cadena informará con un cartel que se ubicará en las entradas y salidas en algunos de sus locales de la implantación de este sistema que frena el carro de la compra en seco.</p><a href="http://www.mercuriocalama.cl/prontus4_nots/site/artic/20050209/pags/20050209045621.html">Articulo de perdida y robos de carritos de super.</a>
+                    <p class="think__details__extra__title">VIABILIDAD DEL PRODUCTO</p>
+                    <p>Nuestra propuesta si bien aún no es muy común verla implementada en el país, en países vecinos como Chile o Colombia ya se hace uso de este sistema de frenado por problemas muy similares a los que sucede en el Perú; los costos por perdidas de carritos de compras, daños y contratación de más personal, son altos durante un año. Es por eso que nuestra propuesta brinda una solución con un bajo y de forma más eficiente, beneficiando así a la empresa y brindando un mejor servicio a su público.</p>
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">IMPACTO SOCIAL Y ECONOMICO</p>
