--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -55,7 +55,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/R4n7OS0AT-w" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4d9lIJDbp4k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <div class="think__details__extra">
                     <p class="think__details__extra__title">Fases del Design Thinking</p>
                     <IMG src="../img/EmpatizaDT.jpg" width="200" height="250"/>
