--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -57,6 +57,7 @@
             <div class="think__img">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qVmfvFhCVeY" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RcU_GgjjQD8" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/MapaMental.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
