--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -69,7 +69,6 @@
                     <p class="think__details__extra__title">Exactitud</p>
                     <p>Revisamos otros proyectos similares al nuestro que fueron implementados en otras regiones del país o inclusive fuera del mismo, y el que más podemos destacar es el de una empresa en España y Chile, donde luego de realizado un análisis en las perdidas de estas herramientas se llegó a la conclusión que se debía dar una solución a este problema que causaba gastos económicos considerables.</p>
                     <a href="https://www.xataka.com/seguridad/asi-es-la-tecnologia-del-sistema-anti-robo-que-bloquea-los-carritos-de-mercadona-si-te-los-quieres-llevar"  target="_blank">Aticulo referido al prblema y las perdidas economicas que genera.</a>
-                    <img src="../img/MapaMental.jpg" alt="">
                 </div>
             </div>   
             <div class="think__details">
@@ -91,6 +90,7 @@
                     <p class="think__details__extra__title">"LA SATISFACCION DE COMPRAR"</p>
                     <p class="think__details__info__cont">Un supermercado que no sea atractivo no solo por sus bajos precios, sino también por el buen orden en que brindan sus servicios.
                     Tenemos que entender cómo se sienten los usuarios de este centro, no solo al entrar a dicho establecimiento y encontrar los bajos precios u ofertas de productos; también veamos en cómo estas personas se sientes antes de entrar y después de salir del local. Una persona se sentirá mucho más cómoda encontrando muy rápido un carrito de súper a su disposición y así no perder mucho tiempo en ingresar, como también este mismo al momento de salir del local no encontrará obstáculos (carritos de compras) abandonados en su camino al dirigirse a su transporte con retorno a casa.</p>
+                    <img src="../img/titular1.jpg" alt="">
                 </div>
             </div>
         </div>
