--- a/design-thinking/practica5.html
+++ b/design-thinking/practica5.html
@@ -55,7 +55,31 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dkTQn5VfmiA" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/maxresdefault.jpg" alt="">
+            <div class="think__details__info">
+                    <p class="think__details__info__title">BOSQUEJO</p>
+                    <p class="think__details__info__cont">Aqui mostramos un bosquejo con algunas especificaciones de las ruedas de rcarritos de supermercado.</p>
+                    <img src="../img/BOSQUEJOrueda.jpg" alt="">
+                    <p class="think__details__extra__title">INVOLUCRADOS EN EL DESARROLLO DE LA PROPUESTA</p>
+                    <p class="think__details__extra__title">1.bastidor que une al eje:</p>
+                    <p>Permitira mantener sujeto el dispositivo de frenado al carrito de compras, brindando asi mas seguridad.</p>
+                    <p class="think__details__extra__title">2.giratorio superior</p>
+                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
+                    <p class="think__details__extra__title">3.eje</p>
+                    <p>El eje basicamente mantiene unida la rueda del sistema de freno con el bastidor.</p>
+                    <p class="think__details__extra__title">4.nucleo</p>
+                    <p>Protege al eje de posibles golpes y mantiene firme la rueda.</p>
+                    <p class="think__details__extra__title">5. pieza cilindrica de diametro algo inferior que el de las ruedas</p>
+                    <p>Es la rueda la cual se encuntra hecho de un material sintetico y siendo asi suave ante posibles grietas o superficies malas por las que es carrtio tenga que pasar.</p>
+                    <p class="think__details__extra__title">6. guardapolvos quita hilos</p>
+                    <p>Mantine la posicion de la pieza cilindrica para que asi la tuerca de fijacion pueda cumplir su funcion sin dañar otros componentes al momento de asegurar.</p>
+                    <p class="think__details__extra__title">7. mecanismos que está formada la rueda</p>
+                    <p>Permitira que el carritos pueda reallizar sus funciones con total normalidad brindandole al cliente mas comodiad al momento de realizar compras.</p>
+                    <p class="think__details__extra__title">9. tuerca o fijación amovible similar</p>
+                    <p>Mantiene fija el guardapolvos evitando asi que se desprenda o se deslice.</p>
+                    <p class="think__details__extra__title">11. acanaladura</p>
+                    <p>Una superficie que que se encuentra cubierta por la pieza cilíndrica y a la vez mantiene estable esta, evitando que la pieza cilíndrica se deforme.</p>
+                </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -64,25 +88,24 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">Técnica de Brainstorming</p>
                     <p class="think__details__info__cont">El brainstorming es una técnica que  ayuda a crear ideas creativas y es muy útil para algunas empresas y personas que quieran desarrollar nuevas ideas.</p>
+                    <p class="think__details__extra__title">TECNICA DE BRAINSTORMING</p>
+                    <p class="think__details__extra__title">Definición del Problema</p>
+                    <p>¿Cómo podemos mejorar la organización de los carritos de compras en los supermercados sin generar gastos a largo plazo para la empresa y mejorar la experiencia de sus compradores?</p>
+                    <p class="think__details__extra__title">Grupo de Trabajo</p>
+                    <p>El equipo que propone la implementación de frenos para carritos de compras, el cual se encuentra conformado por 5 miembros de los cuales 2 de miembros del grupo de trabajo cuentan con conocimientos en componentes electrónicos lo cual sirve de ayuda para una correcta selección e inspección del producto, también cuenta con 3 miembros dedicados a la investigación de nuevos productos en el mercado y sus costos.</p>
+                    <p class="think__details__extra__title">Se establece Normas</p>
+                    <p>A continuación, se detalla las normas básicas de esta dinámica, las cuales deben ser seguidas estrictamente pata garantizar que surjan todas las alternativas posibles, aunque en un primer momento algunas de ellas puedan parecer poco viables.</p>
+                    <p>Debemos posponer y omitir cualquier juicio critico acerca de las ideas propuestas.</p>
+                    <p>Debemos alentar cualquier idea salvaje y exagerada.</p>
+                    <p>En esta etapa lo que importa es la cantidad, no la calidad.</p>
+                    <p>Hay que escribir brevemente cada idea, sin entrar en detalles.</p>
+                    <p>Construir sobre las ideas propuestas por los demás.</p>
+                    <p class="think__details__extra__title">Lluvia de Ideas</p>
+                    <p>A partir de ahora permitimos que cualquiera pueda aportar a nuevos diseños o ideas de los frenos de carritos, de forma libre y espontánea, partiendo de la idea de otro compañero. Así generamos el máximo número de alternativas posibles, visibles para todos los miembros.</p>
+                    <p class="think__details__extra__title">Cierre de Dinámica</p>
+                    <p>Concluimos la dinámica al notar que la lluvia de idea que brinda el grupo a culminado, se recopila la información brindada por cada miembro del grupo y la filtramos según su categoría.</p>
+                    <img src="../img/RUEDAbosquejo.jpg" alt="">
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo </p>
-                    <a href="https://drive.google.com/file/d/1TmrF-JHLkRz-yMFOVZ_WixS0xNnwRbQA/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Fabricación Digital</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1yOkK3zdU4yDNQWubY4xPMVwYE95bN0XV/view?usp=sharing" target="_blank" class="think__details__extra__description">Archivo - Fabricación Digital</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1yOkK3zdU4yDNQWubY4xPMVwYE95bN0XV/view?usp=sharing" target="_blank" class="think__details__extra__description">Archivo - Fabricación Digital</a>
-                </div>
-                <div class="think__details__extra">
-                        <p class="think__details__extra__title">...</p>
-                        <img src="../img/laser.jpg" alt="">
                     </div>
             </div>
         </div>
