--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/bosquejo.jpg" alt="">
+                <img src="../img/LEDLamp.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
